[package]
name = "volscan"
version = "0.1.5"
authors = ["Triet Trinh <contact@trinhminhtriet.com>"]
edition = "2018"
readme = "README.md"
description = "🚀 VolScan: High-speed, multi-threaded disk scanner providing detailed directory summaries with JSON/CSV output support."
repository = "https://github.com/trinhminhtriet/volscan"
homepage = "https://trinhminhtriet.com"
license = "MIT"
keywords = ["disk", "scanner", "multi-threaded", "json", "csv"]
categories = ["command-line-utilities"]

[dependencies]
structopt = "0.3.21"
strum = "0.27.2"
strum_macros = "0.27.2"
serde_json = "1.0.143"
serde = { version = "1.0.228", features = ["derive"] }
csv = "1.4.0"
jwalk = "0.8.1"
num_cpus = "1.17.0"
indicatif = "0.18.2"
console = "0.15.10"
indexmap = "2.12.0"
filesize = "0.2.0"
prettytable-rs = "0.10.0"
chrono = { version = "0.4.42", features = ["serde"] }
chrono-humanize = "0.2.3"

[target.'cfg(target_family = "unix")'.dependencies]
nix = "0.30.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
